added some error handling to the 'load_knowledge_base()' function to provide more information about what's happening

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -3,6 +3,10 @@
     {
       "question": "Hello",
       "answer": "Hi"
+    },
+    {
+      "question": "Hi",
+      "answer": "Hello, how may I help you?"
     }
   ]
 }
