Chatbot Intents.json Update

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 annotated-types==0.7.0
-blis==0.9.1
+blis<0.9.1
 catalogue==2.0.10
 certifi==2024.2.2
 charset-normalizer==3.3.2
@@ -26,16 +26,16 @@ Pygments==2.18.0
 requests==2.32.3
 rich==13.7.1
 shellingham==1.5.4
-smart-open==7.0.4
-spacy==3.7.4
+smart-open<7.0.4
+spacy==3.5.1
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 srsly==2.4.8
-thinc==9.0.0
+thinc<=9.0.0
 tqdm==4.66.4
-typer==0.12.3
+typer<=0.12.3
 typing_extensions==4.12.0
 urllib3==2.2.1
 wasabi==1.1.2
-weasel==0.4.1
+weasel<=0.4.1
 wrapt==1.16.0
