--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ packaging==24.0
 preshed==3.0.9
 pydantic==2.7.2
 pydantic_core==2.18.3
+pytz==2024.1
 requests==2.32.3
 smart-open==6.4.0
 spacy==3.7.4
