--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -66,7 +66,7 @@
     },
     {
       "question": "I need scaffolding for a roofing project can you help?",
-      "answer": "Sure, I can assist you with that. Could you provide me with some more information regarding the height and size of the building? For example, is it a house or a bungalow? How many levels does the building have, and for how long do you require the scaffold?"
+      "answer": "Sure, I can assist you with that. Can you provide me with some more information regarding the height and size of the building? For example, is it a house, flat or a bungalow? How many levels does the building have, and for how long do you require the scaffold?"
     },
     {
       "question": "scaffold duration",
