Chatbot Knowledge Update

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -87,6 +87,10 @@
     {
       "question": "What sort of Information?",
       "answer": "Like the area size of the property and possible duration of hire, all of which can be obtained by the on-ste contractor who will be carrying out the work! "
+    },
+    {
+      "question": "Hey",
+      "answer": "Hi"
     }
   ]
 }
