--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -94,14 +94,15 @@
     },
     {
       "question": "I have a bungalow, I'm having a loft extension fitted!",
-      "answer": "Thank you for reaching out to us regarding your loft extension project on your bungalow. We’re excited to help you with your scaffolding needs! For a loft extension, we typically provide a scaffold setup that ensures safety and efficiency for both your builders and the overall project. Here’s what we propose:"
+      "answer": "Thank you for reaching out to us regarding your loft extension project on your bungalow. We\u2019re excited to help you with your scaffolding needs! For a loft extension, we typically provide a scaffold setup that ensures safety and efficiency for both your builders and the overall project. Here\u2019s what we propose:"
     },
     {
-      "question": "What are your proposals and what the initial steps involved in scaffold hire", 
+      "question": "What are your proposals and what the initial steps involved in scaffold hire",
       "answer": "The Initial Site Visit, will invole us conducting an on-site survey to assess the specific requirements of your property and the extension project."
     },
+    {
       "question": "Custom Scaffold Design",
-      "answer": "Based on the survey, we’ll design a scaffold structure tailored to your bungalow’s dimensions and the loft extension plans."
+      "answer": "Based on the survey, we\u2019ll design a scaffold structure tailored to your bungalow\u2019s dimensions and the loft extension plans."
     },
     {
       "question": "Scaffold Installation",
@@ -109,33 +110,26 @@
     },
     {
       "question": "Ongoing Support",
-      "answer": "Throughout the duration of your project, we offer maintenance and adjustments to the scaffold as needed."
-<<<<<<< HEAD
-    }
-        ],
-        "requestDetails": {
-=======
+      "answer": "Throughout the duration of your project, we will be on hand to offer maintenance and adjustments to the scaffold as needed, and address any questions or concerns you may have!."
     },
-      "requestDetails": {
->>>>>>> 01b73d0 (Chatbot Knowledge Update)
-          "message": "To proceed, could you please provide us with a few details?",
-          "details": [
-            "The exact location of your bungalow.",
-            "The anticipated start date of the loft extension.",
-            "Any specific requirements or constraints we should be aware of."
-          ]
-        },
-        "nextSteps": {
-          "message": "Once we have this information, we can provide you with a detailed quote and timeline. Feel free to contact us if you have any questions or need further assistance.",
-          "contactInformation": {
-            "contactName": "[Your Name]",
-            "companyName": "[Your Company Name]",
-            "contactDetails": "[Contact Information]",
-            "websiteURL": "[Website URL]"
-          }
-        },
-        "closingMessage": "We look forward to assisting you with your project!"
-      }
+    {
+      "question": "What sort of information do you require to proceed?",
+      "answer": "Well to proceed, could you please provide us with a few details, such as the\n1. The exact location of your bungalow.\n2. The anticipated start date of the loft extension.\n3. Any specific requirements or constraints we should be aware of."
+    },
+    {
+      "question": "What are the nextSteps?",
+      "answer": "Once we have this information, we can provide you with a detailed quote and timeline. Feel free to contact us if you have any questions or need further assistance, Here is our Contact Information\n Company Name: Tailored Scaffolding Ltd\n CEO: Jason Bacon\n Mobile Number: 07972 612 395\n Website: https://www.tailoredscaffolding.co.uk/\n We look forward to assisting you with your project!"
+    },
+    {
+      "question": "restart",
+      "answer": "would you like me to reboot?"
+    },
+    {
+
+    },
+    {
+      "question": "exit",
+      "answer": "Good Bye!"
     }
   ]
 }
