Chatbot Knowledge Update

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -1,6 +1,46 @@
 {
   "questions": [
     {
+      "question": "How do I get a quote for scaffolding services?",
+      "answer": "You can request a quote by filling out the form on our website or by contacting our customer service team at +1-800-SCAFFOLD."
+    },
+    {
+      "question": "What safety measures are in place for scaffolding?",
+      "answer": "We adhere to strict safety protocols including daily inspections, use of PPE, and compliance with OSHA regulations."
+    },
+    {
+      "question": "Can I modify the scaffolding once it's installed?",
+      "answer": "No, any modifications should be carried out by our certified professionals to ensure safety and compliance."
+    },
+    {
+      "question": "How long can I hire the scaffolding for?",
+      "answer": "The hire duration can vary based on the project requirements. We offer flexible hire periods ranging from a few days to several months."
+    },
+    {
+      "question": "What is included in the scaffolding hire service?",
+      "answer": "Our scaffolding hire service includes delivery, erection, regular inspections, and dismantling of the scaffolding. Additional services such as design and maintenance can also be provided."
+    },
+    {
+      "question": "Do you provide training for working with scaffolding?",
+      "answer": "Yes, we offer comprehensive training sessions for working safely with scaffolding, including fall prevention, PPE usage, and emergency procedures."
+    },
+    {
+      "question": "What types of payment do you accept?",
+      "answer": "We accept various payment methods including credit cards, bank transfers, and checks. For large projects, we also offer installment plans."
+    },
+    {
+      "question": "How quickly can you set up the scaffolding after I place an order?",
+      "answer": "Setup time depends on the project size and complexity, but we typically begin setup within 3-5 business days after the order is placed."
+    },
+    {
+      "question": "Do you offer any discounts for long-term hires or large projects?",
+      "answer": "Yes, we offer discounts for long-term hires and large projects. Please contact our sales team for more details on our discount policies."
+    },
+    {
+      "question": "What should I do if there is a problem with the scaffolding?",
+      "answer": "If you encounter any issues with the scaffolding, please contact our customer support team immediately at +1-800-SCAFFOLD. We offer 24/7 support for emergency situations."
+    },
+    {
       "question": "Hello",
       "answer": "Hi"
     },
@@ -125,11 +165,17 @@
       "answer": "would you like me to reboot?"
     },
     {
-
-    },
-    {
       "question": "exit",
       "answer": "Good Bye!"
+    },
+    {
+      "question": "What are your hours of operation",
+      "answer": "We Operate on a 24 Hour Basis, Don't hesitate to contact us if have problem"
+    },
+    {
+      "question": "What are your contact details please",
+      "answer": "Our contact details are as follows\nPhone: 07972 612 395\nEmail: info@tailoredscaffolding.com\nWebsite: www.tailoredscaffolding.co.uk"
     }
+    
   ]
 }
