Updated the error Handling and Added a clear log script

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 annotated-types==0.7.0
+argh==0.31.2
 blis==0.7.11
 catalogue==2.0.10
 certifi==2024.2.2
@@ -11,17 +12,23 @@ en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_
 idna==3.7
 Jinja2==3.1.4
 langcodes==3.4.0
+language==0.6
+language-tool-python==2.8
 language_data==1.2.0
 marisa-trie==1.1.1
 MarkupSafe==2.1.5
 murmurhash==1.0.10
 mysql-connector-python==8.4.0
+new-package==0.0.1
 numpy==1.26.4
 packaging==24.0
 preshed==3.0.9
 pydantic==2.7.2
 pydantic_core==2.18.3
+PyDispatcher==2.0.7
+pyenchant==3.2.2
 pytz==2024.1
+PyYAML==6.0.1
 requests==2.32.3
 smart-open==6.4.0
 spacy==3.7.4
@@ -29,6 +36,7 @@ spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 srsly==2.4.8
 thinc==8.2.3
+tool==0.8.0
 tqdm==4.66.4
 typer==0.9.4
 typing_extensions==4.12.0
