--- a/backup/requirements copy.txt
+++ b/backup/requirements copy.txt
@@ -1,41 +1,45 @@
 annotated-types==0.7.0
-blis<0.9.1
+argh==0.31.2
+blis==0.7.11
 catalogue==2.0.10
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
-cloudpathlib==0.18.1
+cloudpathlib==0.16.0
 confection==0.1.4
 cymem==2.0.8
 en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.1/en_core_web_md-3.7.1-py3-none-any.whl#sha256=6a0f857a2b4d219c6fa17d455f82430b365bf53171a2d919b9376e5dc9be032e
 idna==3.7
 Jinja2==3.1.4
 langcodes==3.4.0
+language==0.6
+language-tool-python==2.8
 language_data==1.2.0
 marisa-trie==1.1.1
-markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-mdurl==0.1.2
 murmurhash==1.0.10
+mysql-connector-python==8.4.0
+new-package==0.0.1
 numpy==1.26.4
 packaging==24.0
 preshed==3.0.9
 pydantic==2.7.2
 pydantic_core==2.18.3
-Pygments==2.18.0
+PyDispatcher==2.0.7
+pyenchant==3.2.2
+pytz==2024.1
+PyYAML==6.0.1
 requests==2.32.3
-rich==13.7.1
-shellingham==1.5.4
-smart-open<7.0.4
-spacy==3.5.1
+smart-open==6.4.0
+spacy==3.7.4
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 srsly==2.4.8
-thinc<=9.0.0
+thinc==8.2.3
+tool==0.8.0
 tqdm==4.66.4
-typer<=0.12.3
+typer==0.9.4
 typing_extensions==4.12.0
 urllib3==2.2.1
 wasabi==1.1.2
-weasel<=0.4.1
-wrapt==1.16.0
+weasel==0.3.4
